src/FlightController/python/quadcopter.py

from ctypes import *
import ctypes
import os

##### TO RUN ON UNO Q:
lib_path = os.path.join(os.path.dirname(__file__), "libquadcopter.so")
lib = ctypes.CDLL(lib_path)

##### TO RUN LOCALLY:
#lib = cdll.LoadLibrary('/home/seanb/Documents/quadsquad2026/build/libquadcopter.so')



##### Ensure ctypes knows the argument and return types for every function
# or it won't work on the Uno Q (but may work locally)
lib.Vector3D_new.argtypes = [c_double, c_double, c_double]
lib.Vector3D_new.restype = c_void_p
lib.Vector3D_x.argtypes = [c_void_p]
lib.Vector3D_x.restype = c_double
lib.Vector3D_y.argtypes = [c_void_p]
lib.Vector3D_y.restype = c_double
lib.Vector3D_z.argtypes = [c_void_p]
lib.Vector3D_z.restype = c_double
lib.Quaternion_new.argtypes = [c_double,c_double,c_double]
lib.Quaternion_new.restype = c_void_p
lib.Quaternion_w.argtypes = [c_void_p]
lib.Quaternion_w.restype = c_double
lib.Quaternion_x.argtypes = [c_void_p]
lib.Quaternion_x.restype = c_double
lib.Quaternion_y.argtypes = [c_void_p]
lib.Quaternion_y.restype = c_double
lib.Quaternion_z.argtypes = [c_void_p]
lib.Quaternion_z.restype = c_double
lib.Quaternion_getYaw.argtypes = [c_void_p]
lib.Quaternion_getYaw.restype = c_double
lib.Quaternion_getPitch.argtypes = [c_void_p]
lib.Quaternion_getPitch.restype = c_double
lib.Quaternion_getRoll.argtypes = [c_void_p]
lib.Quaternion_getRoll.restype = c_double
lib.Pose3D_new.argtypes = [c_void_p, c_void_p]
lib.Pose3D_new.restype = c_void_p
lib.Pose3D_translation.argtypes = [c_void_p]
lib.Pose3D_translation.restype = c_void_p
lib.Pose3D_rotation.argtypes = [c_void_p]
lib.Pose3D_rotation.restype = c_void_p
lib.QCRequest_new.argtypes = [c_void_p, c_void_p]
lib.QCRequest_new.restype = c_void_p
lib.QCRequest_position.argtypes = [c_void_p]
lib.QCRequest_position.restype = c_void_p
lib.QCRequest_velocity.argtypes = [c_void_p]
lib.QCRequest_velocity.restype = c_void_p
lib.Quadcopter_new.argtypes = []
lib.Quadcopter_new.restype = c_void_p
lib.Quadcopter_setHeight.argtypes = [c_void_p, c_double]
lib.Quadcopter_setHeight.restype = None
lib.Quadcopter_update_simulation.argtypes = [c_void_p]
lib.Quadcopter_update_simulation.restype = None
lib.Quadcopter_printState.argtypes = [c_void_p]
lib.Quadcopter_printState.restype = None
lib.Quadcopter_frontMotorVel.argtypes = [c_void_p]
lib.Quadcopter_frontMotorVel.restype = c_double
lib.Quadcopter_leftMotorVel.argtypes = [c_void_p]
lib.Quadcopter_leftMotorVel.restype = c_double
lib.Quadcopter_rearMotorVel.argtypes = [c_void_p]
lib.Quadcopter_rearMotorVel.restype = c_double
lib.Quadcopter_rightMotorVel.argtypes = [c_void_p]
lib.Quadcopter_rightMotorVel.restype = c_double
lib.Quadcopter_getTranslation.argtypes = [c_void_p]
lib.Quadcopter_getTranslation.restype = c_void_p
lib.Quadcopter_getVelocity.argtypes = [c_void_p]
lib.Quadcopter_getVelocity.restype = c_void_p
lib.Quadcopter_getTime.argtypes = [c_void_p]
lib.Quadcopter_getTime.restype = c_double
lib.Quadcopter_getRequest.argtypes = [c_void_p]
lib.Quadcopter_getRequest.restype = c_void_p
lib.Quadcopter_addWaypoint.argtypes = [c_void_p, c_double, c_double]
lib.Quadcopter_addWaypoint.restype = None
lib.Quadcopter_beginPath.argtypes = [c_void_p]
lib.Quadcopter_beginPath.restype = None
lib.Quadcopter_beginManualControl.argtypes = [c_void_p]
lib.Quadcopter_beginManualControl.restype = None
lib.Quadcopter_setVelocity.argtypes = [c_void_p, c_void_p]
lib.Quadcopter_setVelocity.restype = None
lib.Quadcopter_updateKinematics.argtypes = [c_void_p]
lib.Quadcopter_updateKinematics.restype = None
lib.Quadcopter_setMotorVelocities.argtypes = [c_void_p, c_double, c_double, c_double, c_double]
lib.Quadcopter_setMotorVelocities.restype = None
lib.Quadcopter_addVisionMeasurement.argtypes = [c_void_p, c_void_p, c_double]
lib.Quadcopter_addVisionMeasurement.restype = None
lib.Quadcopter_addIMUMeasurement.argtypes = [c_void_p, c_void_p, c_void_p]
lib.Quadcopter_addIMUMeasurement.restype = None
lib.Quadcopter_busy.argtypes = [c_void_p]
lib.Quadcopter_busy.restype = c_bool
lib.Quadcopter_isManual.argtypes = [c_void_p]
lib.Quadcopter_isManual.restype = c_bool


##### BINDING CLASSES
# These classes bind to the equivalent C++ classes.
class Vector3D(object):
    def __init__(self, x=0, y=0, z=0, ptr=None):
        if ptr is not None:
            self.ptr = ptr
        else:
            self.ptr = lib.Vector3D_new(x,y,z)

    def x(self):
        return lib.Vector3D_x(self.ptr)

    def y(self):
        return lib.Vector3D_y(self.ptr)

    def z(self):
        return lib.Vector3D_z(self.ptr)


class Quaternion(object):
    def __init__(self, yaw=0, pitch=0, roll=0, ptr=None):
        if ptr is not None:
            self.ptr = ptr
        else:
            self.ptr = lib.Quaternion_new(yaw,pitch,roll)

    def w(self):
        return lib.Quaternion_w(self.ptr)
    def x(self):
        return lib.Quaternion_x(self.ptr)
    def y(self):
        return lib.Quaternion_y(self.ptr)
    def z(self):
        return lib.Quaternion_z(self.ptr)
    def getYaw(self):
        return lib.Quaternion_getYaw(self.ptr)
    def getPitch(self):
        return lib.Quaternion_getPitch(self.ptr)
    def getRoll(self):
        return lib.Quaternion_getRoll(self.ptr)

class Pose3D(object):
    def __init__(self, translation: Vector3D, rotation: Quaternion, ptr=None):
        if ptr is not None:
            self.ptr = ptr
        else:
            self.ptr = lib.Pose3D_new(translation.ptr, rotation.ptr)

    def translation(self):
        return Vector3D(ptr=lib.Pose3D_translation(self.ptr))

    def rotation(self):
        return Quaternion(ptr=lib.Pose3D_rotation(self.ptr))

class QCRequest(object):
    def __init__(self, position: Pose3D, velocity: Pose3D, ptr=None):
        if ptr is not None:
            self.ptr = ptr
        else:
            self.ptr = lib.QCRequest_new(position.ptr, velocity.ptr)

    def position(self):
        return Pose3D(None, None, lib.QCRequest_position(self.ptr))

    def velocity(self):
        return Pose3D(None, None, lib.QCRequest_velocity(self.ptr))


class Quadcopter(object):
    def __init__(self):
        self.ptr = lib.Quadcopter_new()

    def setHeight(self, height):
        lib.Quadcopter_setHeight(self.ptr, height)

    def updateSimulation(self):
        lib.Quadcopter_update_simulation(self.ptr)

    def printState(self):
        lib.Quadcopter_printState(self.ptr)

    def getTime(self):
        return lib.Quadcopter_getTime(self.ptr)

    def frontMotorVel(self):
        return lib.Quadcopter_frontMotorVel(self.ptr)

    def leftMotorVel(self):
        return lib.Quadcopter_leftMotorVel(self.ptr)

    def rightMotorVel(self):
        return lib.Quadcopter_rightMotorVel(self.ptr)

    def rearMotorVel(self):
        return lib.Quadcopter_rearMotorVel(self.ptr)

    def getTranslation(self):
        return Vector3D(ptr=lib.Quadcopter_getTranslation(self.ptr))

    def getVelocity(self):
        return Vector3D(ptr=lib.Quadcopter_getVelocity(self.ptr))

    def getRequest(self):
        return QCRequest(None, None, lib.Quadcopter_getRequest(self.ptr))

    def addWaypoint(self, x, y):
        lib.Quadcopter_addWaypoint(self.ptr, x, y)

    def beginPath(self):
        lib.Quadcopter_beginPath(self.ptr)

    def beginManualControl(self):
        lib.Quadcopter_beginManualControl(self.ptr)

    def setVelocity(self, velocity: Vector3D):
        lib.Quadcopter_setVelocity(self.ptr, velocity.ptr)

    def updateKinematics(self):
        lib.Quadcopter_updateKinematics(self.ptr)

    def setMotorVelocities(self, left, front, right, rear):
        lib.Quadcopter_setMotorVelocities(self.ptr, left, front, right, rear)

    def addVisionMeasurement(self, translation: Vector3D, timestamp):
        lib.Quadcopter_addVisionMeasurement(self.ptr, translation.ptr, timestamp)

    def addIMUMeasurement(self, angle: Quaternion, angular_rate: Vector3D):
        lib.Quadcopter_addIMUMeasurement(self.ptr, angle.ptr, angular_rate.ptr)


    def busy(self):
        return lib.Quadcopter_busy(self.ptr)

    def isManual(self):
        return lib.Quadcopter_isManual(self.ptr)